# -----------------------------------------------------------------------------
# SSG - A lightning-fast static site generator (SSG) optimised for search engine visibility (SEO) and compliant with WCAG 2.1 Level AA accessibility standards.
# -----------------------------------------------------------------------------

[package]
# General project metadata
name = "ssg"                            # The name of the library
version = "0.0.37"                      # The version of the library
authors = ["SSG Contributors"]     # The authors of the library
edition = "2021"                        # The edition of the library
rust-version = "1.88.0"                 # Minimum supported Rust version (set by time-macros, staticdatagen, oxc_*)
license = "MIT OR Apache-2.0"           # Dual licensing strategy
description = """
A Content-First Open Source Static Site Generator (SSG) crafted in Rust.
"""
homepage = "https://github.com/sebastienrousseau/static-site-generator" # The project's homepage
documentation = "https://docs.rs/ssg" # Doc URL
repository = "https://github.com/sebastienrousseau/static-site-generator"
readme = "README.md"                    # The README file
build = "build.rs"                      # The build script

# -----------------------------------------------------------------------------
# Crate Configuration
# -----------------------------------------------------------------------------

# Crates.io categories
categories = [
    "command-line-utilities",
    "parsing",
    "template-engine",
    "web-programming",
]

# Keywords for easier discoverability on Crates.io
keywords = ["cli", "generator", "ssg", "static-site", "wasm"]

# Excluding unnecessary files from the package
exclude = [
    "/.git/*",                          # Exclude version control files
    "/.github/*",                       # Exclude GitHub workflows
    "/.gitignore",                      # Ignore Git ignore file
    "/.vscode/*"                        # Ignore VSCode settings
]

# Including necessary files in the package
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/content/**",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/template/**",
    "/tests/**",
]


# -----------------------------------------------------------------------------
# docs.rs Configuration
# -----------------------------------------------------------------------------
# Starting May 2026, docs.rs builds only the default target unless
# explicitly configured. List all targets for cross-platform docs.
# See: https://blog.rust-lang.org/2026/04/04/docsrs-only-default-targets/
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

# -----------------------------------------------------------------------------
# Library Information
# -----------------------------------------------------------------------------

# The library file that contains the main logic for the binary.
[lib]
name = "ssg"                            # Internal name of the library
path = "src/lib.rs"                     # Path to the library entry point

# The main file that contains the entry point for the binary.
[[bin]]
name = "ssg"                            # Name of the binary
path = "src/main.rs"                    # Path to the binary entry point

# -----------------------------------------------------------------------------
# Features
# -----------------------------------------------------------------------------
[features]
# Optional features that can be enabled or disabled.
default = ["templates", "image-optimization"]
cli = []                                # Enable command-line interface support
benchmark = ["tempfile"]                 # Enable benchmark-specific functionality
templates = ["minijinja"]               # MiniJinja templating engine with inheritance, loops, conditionals
image-optimization = ["image"]          # Image optimization with WebP output and responsive srcset
test-fault-injection = ["fail/failpoints"]   # Test-only fault injection for fs error paths

# -----------------------------------------------------------------------------
# Build Dependencies
# -----------------------------------------------------------------------------
[build-dependencies]
# Dependencies for the build script, used for pre-compilation tasks.
version_check = "0.9.5"                   # Ensures that a compatible Rust version is used

# -----------------------------------------------------------------------------
# Development Dependencies
# -----------------------------------------------------------------------------
[dev-dependencies]
# Dependencies required for testing and development.
criterion = "0.8.2"                       # Benchmarking library to test performance
serial_test = "3.2"                        # Serialise fail-rs failpoint tests so they don't race
uuid = { version = "1.22.0", features = ["v4"] }
fail = { version = "0.5", features = ["failpoints"] }  # Fault injection for tests/fault_injection.rs
tempfile = "3.27.0"
proptest = "1"

# -----------------------------------------------------------------------------
# Dependencies
# -----------------------------------------------------------------------------
[dependencies]
# Required dependencies for building and running the project.
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "cargo", "env"] }
http-handle = "0.0.4"
log = { version = "0.4.29", features = ["std"] }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
staticdatagen = "0.0.8"
toml = "1.1.2"


# Optional dependencies (feature-gated)
fail = { version = "0.5", optional = true }
tempfile = { version = "3.27.0", optional = true }
minijinja = { version = "2", optional = true, features = ["loader"] }
image = { version = "0.25", optional = true, default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# Owned crate for frontmatter parsing
frontmatter-gen = "0.0.5"

# Platform-specific dependency for Unix with OpenSSL
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
openssl = { version = "0.10.77", features = ["vendored"] }

# -----------------------------------------------------------------------------
# Criterion Benchmark
# -----------------------------------------------------------------------------
[[bench]]
# Benchmarking configuration for performance testing.
name = "bench"                              # Name of the benchmark
harness = false                             # Disable the default benchmark harness (used by Criterion)

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------
[[example]]
# Basic example configuration for showcasing the library.
name = "basic"                            # Name of the example
path = "examples/basic_example.rs"        # Path to the example file

[[example]]
# Quickstart example configuration for showcasing the library.
name = "quickstart"                       # Name of the example
path = "examples/quickstart_example.rs"   # Path to the example file

[[example]]
# Multilingual example configuration for showcasing the library.
name = "multilingual"                     # Name of the example
path = "examples/multilingual_example.rs" # Path to the example file

[[example]]
# Plugin pipeline example — SEO, search, minify, live-reload.
name = "plugins"                          # Name of the example
path = "examples/plugins_example.rs"      # Path to the example file

[[example]]
# EAA-compliant accessibility-first blog with a11y reporting and dual feeds.
name = "blog"                             # Name of the example
path = "examples/blog_example.rs"         # Path to the example file

[[example]]
# Documentation portal with content schema validation and syntax highlighting.
name = "docs"                             # Name of the example
path = "examples/docs_example.rs"         # Path to the example file

[[example]]
# Zero-JS EAA-compliant landing page with a11y report.
name = "landing"                          # Name of the example
path = "examples/landing_example.rs"      # Path to the example file

[[example]]
# Developer portfolio with JSON-LD and Atom feed.
name = "portfolio"                        # Name of the example
path = "examples/portfolio_example.rs"    # Path to the example file

# -----------------------------------------------------------------------------
# Linting Configuration
# -----------------------------------------------------------------------------
[lints.rust]
# Linting rules for the project.

## Warnings
missing_copy_implementations = "warn"       # Warn if types can implement `Copy` but don’t
missing_docs = "warn"                       # Warn if public items lack documentation
unstable_features = "warn"                  # Warn on the usage of unstable features
unused_extern_crates = "warn"               # Warn about unused external crates
unused_results = "warn"                     # Warn if a result type is unused (e.g., errors ignored)

## Allowances
bare_trait_objects = "allow"                # Allow bare trait objects (e.g., `Box<dyn Trait>`)
elided_lifetimes_in_paths = "allow"         # Allow lifetimes to be elided in paths
non_camel_case_types = "allow"              # Allow non-camel-case types
non_upper_case_globals = "allow"            # Allow non-uppercase global variables
trivial_bounds = "allow"                    # Allow trivial bounds in trait definitions
unsafe_code = "forbid"                       # Forbid the usage of unsafe code blocks

## Forbidden
missing_debug_implementations = "forbid"    # Forbid missing `Debug` implementations
non_ascii_idents = "forbid"                 # Forbid non-ASCII identifiers
unreachable_pub = "warn"                     # Warn on unreachable `pub` items (bench fns must be pub for criterion)

## Denials
dead_code = "deny"                          # Deny unused, dead code in the project
deprecated_in_future = "deny"               # Deny code that will be deprecated in the future
ellipsis_inclusive_range_patterns = "deny"  # Deny usage of inclusive ranges in match patterns (`...`)
explicit_outlives_requirements = "deny"     # Deny unnecessary lifetime outlives requirements
future_incompatible = { level = "deny", priority = -1 } # Handle future compatibility issues
keyword_idents = { level = "deny", priority = -1 }      # Deny usage of keywords as identifiers
macro_use_extern_crate = "deny"             # Deny macro use of `extern crate`
meta_variable_misuse = "deny"               # Deny misuse of meta variables in macros
noop_method_call = "deny"                   # Deny method calls that have no effect
rust_2018_idioms = { level = "deny", priority = -1 }    # Enforce Rust 2018 idioms
rust_2021_compatibility = { level = "deny", priority = -1 } # Enforce Rust 2021 compatibility
single_use_lifetimes = "deny"               # Deny lifetimes that are used only once
trivial_casts = "deny"                      # Deny trivial casts (e.g., `as` when unnecessary)
trivial_numeric_casts = "deny"              # Deny trivial numeric casts (e.g., `i32` to `i64`)
unused = { level = "deny", priority = -1 }  # Deny unused code, variables, etc.
unused_features = "deny"                    # Deny unused features
unused_import_braces = "deny"               # Deny unnecessary braces around imports
unused_labels = "deny"                      # Deny unused labels in loops
unused_lifetimes = "deny"                   # Deny unused lifetimes
unused_macro_rules = "deny"                 # Deny unused macros
unused_qualifications = "deny"              # Deny unnecessary type qualifications
variant_size_differences = "deny"           # Deny enum variants with significant size differences

# -----------------------------------------------------------------------------
# Clippy Configuration
# -----------------------------------------------------------------------------
[lints.clippy]
# Clippy lint configuration for enhanced code analysis.

## Warnings
all = { level = "warn", priority = -1 }      # Enable all common Clippy lints
pedantic = { level = "warn", priority = -1 } # Enable pedantic lints for stricter checking
cargo = { level = "warn", priority = -1 }    # Enable lints specific to cargo
nursery = { level = "warn", priority = -1 }  # Enable experimental lints from Clippy’s nursery
complexity = { level = "warn", priority = -1 } # Warn on code complexity and suggest improvements
correctness = { level = "warn", priority = -1 } # Ensure code correctness, flagging potential issues
perf = { level = "warn", priority = -1 }     # Lints that catch performance issues
style = { level = "warn", priority = -1 }    # Suggest stylistic improvements
suspicious = { level = "warn", priority = -1 } # Detect suspicious code patterns
module_name_repetitions = "allow"             # Allow repeating module names — many public types intentionally mirror their module
missing_errors_doc = "allow"                 # Skip requiring # Errors doc section on every Result-returning fn
missing_panics_doc = "allow"                 # Skip requiring # Panics doc section

## Allowances
module_inception = "allow"                   # Allow modules with the same name as their parents
too_many_arguments = "allow"                 # Allow functions with more than 7 arguments if justified
missing_docs_in_private_items = "allow"      # Skip requiring documentation for private items
multiple_crate_versions = "allow"            # Transitive duplicates from staticdatagen/scraper — not actionable from this repo
must_use_candidate = "allow"                 # Too noisy for builder-pattern methods
implicit_hasher = "allow"                    # HashMap parameters don't need generic hashers in this codebase
too_many_lines = "allow"                     # Some functions are long by necessity
cast_possible_truncation = "allow"           # Truncation is intentional in image/seo code
cast_sign_loss = "allow"                     # Sign loss is intentional in casting code
cast_precision_loss = "allow"                # Precision loss is acceptable for f64/usize conversions
cast_possible_wrap = "allow"                 # Wrapping is acceptable in this context
similar_names = "allow"                      # Short similar variable names are fine
items_after_statements = "allow"             # Allow items after statements for readability
single_char_lifetime_names = "allow"         # Standard Rust convention
unnecessary_wraps = "allow"                  # Some Result wrappers are for API consistency
return_self_not_must_use = "allow"           # Builder methods returning Self don't need must_use
needless_pass_by_value = "allow"             # Pass-by-value is sometimes clearer
doc_overindented_list_items = "allow"        # Minor doc formatting preference
format_push_string = "allow"                 # push_str(&format!(...)) is clearer than write!() for HTML builders
option_if_let_else = "allow"                 # if-let-else is often more readable than map_or_else
field_reassign_with_default = "allow"        # Reassigning fields after Default::default() is common and clear
trivially_copy_pass_by_ref = "allow"         # Passing &u8 vs u8 is negligible; keep API consistency
match_same_arms = "allow"                    # Explicit match arms improve readability even when identical
unused_self = "allow"                        # Methods may use self in the future or for API consistency
significant_drop_tightening = "allow"        # Drop timing is fine as-is
case_sensitive_file_extension_comparisons = "allow" # URL extensions are known to be lowercase
no_effect_underscore_binding = "allow"       # Intentional Copy-trait tests use _copy bindings
useless_let_if_seq = "allow"                 # Mutable changed flag pattern is idiomatic
many_single_char_names = "allow"             # Short names are fine in small scopes

## Denials — warn level so tests can use unwrap/expect; CI lint enforces on lib
unwrap_used = "warn"                         # Warn on unwrap to encourage error handling
expect_used = "warn"                         # Warn on expect to encourage error handling

## Stylistic noise — silenced workspace-wide (mostly fires in test code).
## These are Pedantic/Nursery suggestions that don't affect correctness:
redundant_closure = "allow"                  # `|x| f(x)` vs `f` — not always interchangeable for borrows
redundant_closure_for_method_calls = "allow" # Same as above
redundant_clone = "allow"                    # `.clone()` is sometimes load-bearing for ownership
needless_raw_string_hashes = "allow"         # `r#"..."#` vs `r"..."` — preserve hashes for safety against future edits
uninlined_format_args = "allow"              # `{name}` vs `name=name` — both are fine
single_char_pattern = "allow"                # `.find('x')` vs `.find("x")` — single-char pattern is the faster form
range_plus_one = "allow"                     # `..n+1` vs `..=n` — index-based code is clearer with the former
format_in_format_args = "allow"              # Inline `format!()` is sometimes clearer
manual_assert = "allow"                      # `if cond { panic!(); }` vs `assert!(!cond)` — readability call
ignored_unit_patterns = "allow"              # `_ = expr` is sometimes clearer than `let _ = expr`
unnecessary_map_or = "allow"                 # `.map_or(false, |x| x == y)` vs `==Some(&y)` — map_or is clearer for Option<&T>
default_trait_access = "allow"               # `Arc::<T>::new(Default::default())` vs `Arc::default()` — both are fine
literal_string_with_formatting_args = "allow" # Test data containing `{n}` shouldn't trigger this; pure data string

# -----------------------------------------------------------------------------
# Profiles
# -----------------------------------------------------------------------------
[profile.dev]
# Development profile configuration for fast builds and debugging.
codegen-units = 16                          # Balance between compile speed and disk usage (256 creates massive target dirs)
debug = 1                                   # Line tables only — saves ~60% disk vs full debuginfo
debug-assertions = true                     # Enable debug assertions
incremental = true                          # Enable incremental compilation
lto = false                                 # Disable link-time optimization for development
opt-level = 0                               # No optimizations in development
overflow-checks = true                      # Enable overflow checks for arithmetic operations
panic = 'unwind'                            # Enable unwinding for panics (useful in development)
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in development builds

[profile.release]
# Release profile configuration for optimized builds.
codegen-units = 1                           # Reduce codegen units for better performance
debug = false                               # Disable debug symbols in release builds
debug-assertions = false                    # Disable debug assertions
incremental = false                         # Disable incremental compilation for optimal binary size
lto = true                                  # Enable link-time optimization for smaller and faster binaries
opt-level = 3                               # Optimize for runtime speed
overflow-checks = true                      # Enable overflow checks for safety
panic = "abort"                             # Use abort on panic for minimal overhead
rpath = false                               # Disable rpath generation
strip = "symbols"                           # Strip symbols for smaller binary size

[profile.test]
# Test profile configuration for debugging and development.
codegen-units = 16                          # Balance between compile speed and disk usage
debug = 1                                   # Line tables only — enough for backtraces, saves disk
debug-assertions = true                     # Enable debug assertions for tests
incremental = true                          # Enable incremental compilation for tests
lto = false                                 # Disable link-time optimization during testing
opt-level = 0                               # No optimizations in test builds
overflow-checks = true                      # Enable overflow checks for tests
rpath = false                               # Disable rpath generation
strip = false                               # Do not strip symbols in test builds

# -----------------------------------------------------------------------------
# Packaging metadata
# -----------------------------------------------------------------------------

# cargo-generate-rpm — used by .github/workflows/release.yml to produce
# `ssg-X.Y.Z-1.x86_64.rpm` for Fedora / RHEL / openSUSE consumers.
[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/ssg", dest = "/usr/bin/ssg", mode = "755" },
    { source = "LICENSE-MIT",    dest = "/usr/share/doc/ssg/LICENSE-MIT",    mode = "644", doc = true },
    { source = "LICENSE-APACHE", dest = "/usr/share/doc/ssg/LICENSE-APACHE", mode = "644", doc = true },
    { source = "README.md",      dest = "/usr/share/doc/ssg/README.md",      mode = "644", doc = true },
]

# cargo-wix — used to produce a Windows MSI installer. Generates
# `wix/main.wxs` lazily on first build via `cargo wix init --force` if
# the template is absent.
[package.metadata.wix]
upgrade-guid = "B7C9E10D-3F4E-4F12-9E86-2C9D7E45A1B0"
path-guid    = "C8DA01EE-401F-4E13-AF97-3DAEAF56B2C1"
license      = false
eula         = false

# -----------------------------------------------------------------------------
# Patch: replace upstream serde_yml (which uses unsafe libyml) with a local
# safe-only implementation.
# -----------------------------------------------------------------------------
[workspace]
members = [".", "crates/ssg-core", "crates/ssg-wasm"]
default-members = ["."]

[patch.crates-io]
serde_yml = { path = "crates/serde_yml" }
