[package]
name = "ssg-core"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core functionality for the Shokunin Static Site Generator"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = "4.5"
comrak = "0.29"
dtt = "0.0.8"
env_logger = "0.11"
html-generator = "0.0.1"
http-handle = "0.0.2"
langweave = "0.0.1"
lazy_static = "1.5"
log = { version = "0.4", features = ["std"] }
metadata-gen = "0.0.1"
minify-html = "0.15"
pulldown-cmark = "0.12"
quick-xml = "0.36"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rlg = "0.0.6"
rss-gen = "0.0.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
sitemap-gen = "0.0.1"
staticweaver ="0.0.1"
tempfile = "3.12"
toml = "0.8"
yaml-rust2 = "0.9"
uuid = { version = "1.10", features = ["v4"] }
vrd = "0.0.8"

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.
