[package]
name = "ssg-frontmatter"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A frontmatter parser for Static Site Generators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ssg-frontmatter"
keywords = ["frontmatter", "yaml", "toml", "json", "ssg"]
categories = ["parsing", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
