[package]
name = "ssg-html"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "HTML generation and optimization for static site generators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ssg-html"
documentation = "https://docs.rs/ssg-html"
readme = "README.md"
keywords = ["html", "markdown", "ssg", "static-site-generator"]
categories = ["web-programming", "text-processing"]

[dependencies]
comrak = "0.28"
lazy_static = "1.5"
regex = "1.10"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.40", features = ["full", "test-util"] }

[features]
default = []
async = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
