[package]
name = "ssg-html"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "HTML generation and optimization for static site generators"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ssg-html"
documentation = "https://docs.rs/ssg-html"
readme = "README.md"
keywords = ["html", "markdown", "ssg", "static-site-generator"]
categories = ["web-programming", "text-processing"]

[dependencies]
comrak = "0.28"
html-escape = "0.2.13"
htmlescape = "0.3"
minify-html = "0.15"
once_cell = "1.20"
regex = "1.10"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }

ssg-frontmatter = { version = "0.0.1", path = "../ssg-frontmatter" }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.40", features = ["full", "test-util"] }

[features]
default = []
async = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
