# Cargo.toml - Configuration file for the SSG I18n (Shokunin Static Site Generator Internationalization)
# Copyright © 2024 Shokunin Static Site Generator. All rights reserved.
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
# Metadata about the package.
authors.workspace = true
build = "build.rs"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# The name of the crate, used by Cargo to identify the project.
name = "ssg-i18n"
version = "0.0.1"

# A short description of the project. This is displayed on package registries like crates.io.
description = "Internationalization and localization support for the Shokunin Static Site Generator"

# The path to the README file for the project. Cargo will include this file in the package.
readme = "README.md"

[dependencies]
# Dependencies required for building and running the project.
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
regex = "1.5"

[build-dependencies]
# Dependencies for build scripts.
version_check = "0.9" # Check the Rust version used to compile the package.

[lib]
name = "ssg_i18n"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3.2"
assert_fs = "1.0"
predicates = "3.0"
criterion = "0.5"

[[bench]]
name = "translation_benchmark"
harness = false
